--- a/src/DisplayItems.css
+++ b/src/DisplayItems.css
@@ -341,3 +341,191 @@
     }
     
 }
+
+
+@media only screen and (min-width: 360px) and (max-width: 767px) 
+{
+
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+    
+    .absolute{
+        
+        position: absolute;
+        top: 220px;
+        width: 100%;
+
+        
+    }
+    
+    .shop-section
+    {
+       
+        display: flex;
+        justify-content: space-evenly;
+        background-color: transparent;
+        flex-wrap: wrap;
+       
+    }
+    
+    
+    .box{
+     
+        width: 110px;
+        height: 190px;
+        margin-top:25px;
+        background-color: white;
+        position: relative;
+       
+        
+    }
+    .text{
+        
+        margin-left:0px;
+        margin-top: 15px;
+        font-size: 10px;
+        font-weight: 900;
+    }
+
+   
+   
+    .box-image1{
+        
+         background-image: url('./pics/DisplayItems/image19.jpg');
+        width: 90px;
+        height: 90px;
+        background-size: cover;
+        margin-left: 0px;
+        /* border: 1px solid black; */
+        position: absolute;
+        left: 10px;
+        margin-top: 10px;
+        
+        
+    }
+    
+    .box-image2{
+        background-image: url('./pics/DisplayItems/image10.jpg');
+        width: 90px;
+        height: 90px;
+        
+         background-size: cover;
+         position: absolute;
+        left: 10px;  
+         
+     }
+     .box-image3{
+        background-image: url('./pics/DisplayItems/image5.jpg');
+        width: 90px;
+        height: 90px;
+        margin-bottom: 30px;
+         background-size: cover; 
+         position: absolute;
+        left: 10px;
+          
+         
+     }
+     .box-image4{
+        background-image: url('./pics/DisplayItems/image1.jpg');
+        width: 90px;
+        height: 90px;
+        
+        margin-bottom: 30px;
+         background-size: cover;  
+         position: absolute;
+        left: 10px;
+     }
+    
+     .box-image5{
+        background-image: url('./pics/DisplayItems/image8.jpg');
+        width: 90px;
+        height: 90px;
+        margin-top: 10px;
+         background-size: cover;  
+         position: absolute;
+        left: 10px;
+     }
+    
+      .box-image6{
+        background-image: url('./pics/DisplayItems/image6.jpg');
+        width: 90px;
+        height: 90px;
+        margin-top: 10px;
+         background-size: cover;  
+         position: absolute;
+        left: 10px;
+     }
+    
+     .box-image7{
+        background-image: url('./pics/DisplayItems/image14.jpeg');
+        width: 90px;
+        height: 90px;
+        margin-top: 10px;
+         background-size: cover;  
+         position: absolute;
+        left: 10px;
+     }
+    
+     .box-image8{
+        background-image: url('./pics/DisplayItems/image13.jpeg');
+        width: 90px;
+        height: 90px;
+        
+         background-size: cover;  
+         position: absolute;
+        left: 10px;
+     }
+    
+     .box-image9{
+        background-image: url('./pics/DisplayItems/image22.jpg');
+        width: 90px;
+        height: 90px;
+        margin-top: 10px;
+         background-size: cover;  
+         position: absolute;
+        left: 10px;
+     }
+    
+     .box-image10{
+        background-image: url('./pics/DisplayItems/image23.jpg');
+        width: 90px;
+        height: 90px;
+        
+         background-size: cover;  
+         position: absolute;
+        left: 10px;
+     }
+    
+     .box-image11{
+        background-image: url('./pics/DisplayItems/image18.jpg');
+        width: 90px;
+        height: 90px;
+        margin-top: 10px;
+         background-size: cover;  
+         position: absolute;
+        left: 10px;
+     }
+    
+     .box-image12{
+        background-image: url('./pics/DisplayItems/image11.jpg');
+        width: 90px;
+        height: 90px;
+        
+         background-size: cover;  
+         position: absolute;
+        left: 10px;
+     }
+    
+     
+    
+    .box1-content,.box2-content,.box3-content,.box4-content,.box5-content,.box6-content,
+    .box7-content,.box8-content,.box9-content,.box10-content,.box11-content,.box12-content
+    {
+        margin-left: 24px;
+        margin-right: 24px;
+        
+    }
+}
