--- a/src/Footer.module.css
+++ b/src/Footer.module.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
 #panel1{
     width: 100%;
     height: 40px;
@@ -60,17 +66,32 @@
 }
 
 #footer2{
-    height: 50px;
+    padding:10px;
+    height: 110px;
     width: 100%;
     background-color:#1f2c3b; 
     border-top: 1px solid white;
     color: white;
-    
-  
-    
+
+}
+.horizontal{
+    margin-top: 10px;
+    width: 100%;
+    border-top:2px solid #7c8b89;
+}
+#vinay{
+    margin-top: 10px;
+    font-style: italic;
+    font-weight: 900;
+    font-family: 'Times New Roman', Times, serif;
 }
 
+
 #icon{
+    font-size: 20px;
+
+    margin-left: 40px;
+    margin-right: 50px;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -148,6 +169,7 @@
     }
     
     #footer2{
+        padding:10px;
         height: 50px;
         width: 100%;
         background-color:#1f2c3b; 
@@ -156,6 +178,119 @@
         
       
         
+    }
+
+    .horizontal{
+        margin-top: 10px;
+        width: 100%;
+        border-top:2px solid #7c8b89;
+    }
+    #vinay{
+        margin-top: 10px;
+        font-style: italic;
+        font-weight: 900;
+        font-family: 'Times New Roman', Times, serif;
+    }
+    
+    #icon{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        margin-right: 12px;
+        display: inline;
+         
+    }
+}
+
+
+@media only screen and (min-width: 360px) and (max-width: 767px) 
+{
+    #panel1{
+        width: 100%;
+        height: 40px;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        /* border: 1px solid black; */
+        background-color: #7c8b89; 
+        color: rgb(0, 0, 0);
+        display: flex;
+        justify-content: center;
+        align-items: center;  
+      
+    }
+    
+    
+    #panel2{
+        width: 100%;
+        height: 550px;
+        border-top: #ebe7e7 1px solid;
+        background-color:#29313b;
+        display: flex;
+        /* border: 1px solid black; */
+       /* flex-direction: column; */
+        flex-wrap: wrap;
+        
+       
+    
+    }
+    
+    
+    #panel2items{
+        width: 60%;
+        height: 100px;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        list-style-type: none;
+        font-weight: 700;
+        font-size: 20px;
+        
+        
+    }
+
+    
+    
+    
+    #d1{
+        color: white; 
+        text-decoration: none;
+        list-style-type: none;
+        font-size: 12px;
+        margin-top: 30px;
+        
+    
+    }
+    
+    #d1:hover{
+        text-decoration: underline;
+    }
+    #title{
+        color: rgb(179, 235, 220);
+        font-size: 19px;
+        font-weight:900;
+    }
+    
+    #footer2{
+        padding:10px;
+       
+        height: 110px;
+        width: 100%;
+        background-color:#1f2c3b; 
+        border-top: 1px solid white;
+        color: white;
+
+      
+    }
+    .horizontal{
+        margin-top: 10px;
+        width: 100%;
+        border-top:2px solid #7c8b89;
+    }
+    #vinay{
+        margin-top: 10px;
+        font-style: italic;
+        font-weight: 900;
+        font-family: 'Times New Roman', Times, serif;
     }
     
     #icon{
