--- a/src/Header.module.css
+++ b/src/Header.module.css
@@ -259,3 +259,157 @@
 
 
 }
+
+
+@media only screen and (min-width: 360px) and (max-width: 767px) 
+{
+
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
+  .header {
+    height: 130px;
+    width: 100%;
+    position: sticky;
+    top: 0;
+    z-index: 1100;
+    background-color: #1f2c3b;
+    padding: 10px;
+   
+
+  }
+
+  .emart {
+    margin-top: 3px;
+    color: red;
+    font-style: italic;
+    font-family: 'Times New Roman', Times, serif;
+    position: absolute;
+    top: 0px;
+    
+  }
+
+  .itemsDiv {
+
+    width: 100%;
+    height: 40px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    /* border: 1px solid black; */
+    position: absolute;
+    top: 35px;
+    left: 0px;
+
+
+  }
+  #all{
+    display: none;
+  }
+  #sellers{
+    width: auto;
+    /* border: 1px solid black; */
+    
+  }
+  #deals{
+    width: auto;
+    padding-left: 10px;
+  }
+
+  .listItems {
+    display: inline-block;
+    border-radius: 7px;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 13px;
+    font-weight: 900;
+    cursor: pointer;
+    font-weight: 500;
+    padding-top: 4px;
+    padding-bottom: 3px;
+    padding-left: 3px;
+    padding-right: 3px;
+    text-decoration: none;
+    color: white;
+    margin: 3px;
+   
+
+  }
+
+  .listItems:hover {
+    background-color: #177ef5;
+    box-shadow: 5px 5px 7px #918c8c;
+    transition: background-color 0.90s ease;
+  }
+
+  .input {
+    width: 235px;
+    height: 10px;
+    position: absolute;
+    bottom: 25px
+  }
+
+  .logBtnDiv {
+    width: 100px;
+    height: 50px;
+    display: flex;
+    flex-direction: row;
+    position: absolute;
+    right: 8px;
+    bottom:5px;
+    /* margin-top: 10px; */
+    /* border: 1px solid black; */
+    
+  }
+
+
+
+  .login {
+    height: 30px;
+    width: 50px;
+    font-size: 12px;
+    border-radius: 13px;
+    font-family: 'Times New Roman', Times, serif;
+    background-color: #4CAF50;
+    color: white;
+    font-weight: 600;
+    padding: 5px;
+    cursor: pointer;
+    margin: 5px;
+
+  }
+
+  .signup {
+    height: 30px;
+    width: 60px;
+    font-size: 12px;
+    border-radius: 13px;
+    font-family: 'Times New Roman', Times, serif;
+    background-color: #4CAF50;
+    color: white;
+    font-weight: 600;
+    cursor: pointer;
+    margin: 5px;
+   padding: 5px;
+  }
+
+  .login:hover {
+
+    background-color: #14db1e;
+    transition: background-color 0.50s ease;
+    box-shadow: 5px 5px 10px #695151;
+  }
+
+  .signup:hover {
+
+    background-color: #14db1e;
+    transition: background-color 0.50s ease;
+    box-shadow: 5px 5px 10px #695151;
+  }
+
+
+}
+
+
