--- a/src/TopDeals.module.css
+++ b/src/TopDeals.module.css
@@ -156,3 +156,86 @@
     }
     
 }
+
+@media only screen and (min-width: 360px) and (max-width: 767px) 
+{
+
+    .ContainerDiv{
+        width: 100%;
+        background-color: #e2e7e6;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        height: 1100px;
+        border-top-left-radius: 70px;
+        border-top-right-radius: 70px;
+        margin-bottom: 40px;
+       
+    }
+    
+    #ContainerDiv2{
+        width: 100%;
+        margin-top: 35px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        height: 1100px;
+      
+        border-top-left-radius: 70px;
+        border-top-right-radius: 70px;
+        /* border: 1px solid black; */
+        box-shadow: 5px 5px 30px #695151;
+        background-color:rgba(255, 255, 255, 0.767);
+        
+    }
+    
+    #Container{
+        width: 100%;
+        height: 900px;
+        /* border:  1px solid black; */
+        border-top-left-radius: 70px;
+        border-top-right-radius: 70px;
+        border-bottom-left-radius: 70px;
+        border-bottom-right-radius: 70px;
+        margin-top: 30px;
+        box-shadow: 5px 5px 30px #695151;
+    }
+    
+    #innerDiv{
+        width: 100%;
+        height: 60px;
+        background-color: #adb0b4;
+        text-align: center;
+        color:black;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        border-top-left-radius: 70px;
+        border-top-right-radius: 70px;
+        box-shadow: 5px 5px 30px #695151;
+        
+        /* border: 1px solid black; */
+        
+       
+    }
+
+    /*top deals images container*/
+    #innerDiv2{
+        width: 100%;
+        /* border: 1px solid black; */
+        height: 700px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+       
+        
+    }
+    
+    #img{
+        width: 100px;
+        height: 160px;
+        border-radius: 20px;
+        box-shadow: 5px 5px 30px #695151;
+        margin: 5px;
+        margin-top: 35px;
+    }
+    
+}
